--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<meta charset="UTF-8">
+
 ANIMAIS EM EXTINÇÃO 
 Os animais extintos são aqueles que desapareceram por diversos motivos do planeta Terra, sejam por fenômenos naturais ou pela intervenção humana na natureza.
 
